# Wells-HackAThon_NL2SQLGenAI

./: LICENSE  README.md
MySQL_DB_SQL_of_Given_DataSet/: banking_schema_mysql.sql
NL-2-sql-App/: .coverage  .env.backup  .gitignore  README.md  TEST_COVERAGE_PLAN.md  TEST_COVERAGE_REPORT.md  app.py  coverage.xml  pyproject.toml  requirements.txt  run_app.sh  run_tests.py  setup_env.sh  setup_uv.sh  test_coverage_status_report.md
NL-2-sql-App/backend/: db_metadata.py  example_prompt.json  executor.py  llm_prompt_builder.py  llm_prompt_builder_new.py  llm_provider.py  logger_config.py  metadata_loader.py  pipeline.py  planner.py  retriever.py  schema_processor.py  sql_generator.py  sql_validator.py  summarizer.py  validator.py
NL-2-sql-App/db/: db_dataset_LLM_input.json  init_db.py  schema.sql  setup_db.py
NL-2-sql-App/docs/: ai-sql-bot-diagrams.md
NL-2-sql-App/frontend/: agent_flow_ui.py  agent_tabs_ui.py  components.py  layout.py
NL-2-sql-App/scripts/: init_schema.py
NL-2-sql-App/tests/: test_db_metadata.py  test_executor.py  test_llm_prompt_builder.py  test_llm_provider.py  test_metadata_loader.py  test_pipeline.py  test_planner.py  test_retriever.py  test_schema_processor.py  test_sql_generation_integration.py  test_sql_generator.py  test_sql_validator.py  test_summarizer.py  test_validator.py
NL-2-sql-App/vectorstore/: chroma_store.py
code/src/data/: banking_data.csv
